@@ -265,6 +265,11 @@ int hashconfig_init (hashcat_ctx_t *hashcat_ctx)
     }
   }
 
+  if (user_options->multiply_accel_disable == true)
+  {
+    hashconfig->opts_type |= OPTS_TYPE_MP_MULTI_DISABLE;
+  }
+
   if (user_options->self_test_disable == true)
   {
     hashconfig->opts_type |= OPTS_TYPE_SELF_TEST_DISABLE;
