@@ -1,6 +1,12 @@
 * changes v6.2.3 -> v6.2.x
 
 ##
+## Features
+##
+
+- Added option --multiply-accel-disable (short: -M) to disable multiply the kernel-accel with the multiprocessor count automatism
+
+##
 ## Bugs
 ##
 
